ci(none): update github actions with eslint check

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,9 @@ jobs:
     container: cypress/browsers:node13.3.0-chrome-79-ff70
     steps:
       - uses: actions/checkout@v1
+      - uses: hallee/eslint-action@1.0.1
+        with:
+          "**/*.js"
       - uses: cypress-io/github-action@v1
         with:
           browser: chrome
