--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,11 @@
-name: Cypress Chrome Headless
+name: Pipeline
 on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: npm run i
+      - run: npm ci
       - run: npm run lint
   cypress-run:
     runs-on: ubuntu-latest
