--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "commit": "git-cz",
-    "lint": "eslint **/*.js"
+    "lint": "npx eslint **/*.js"
   },
   "author": "Josh McCure",
   "license": "ISC",
