--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,14 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: npm ci
       - run: npm run lint
   cypress-run:
     runs-on: ubuntu-latest
     container: cypress/browsers:node13.3.0-chrome-79-ff70
     steps:
       - uses: actions/checkout@v1
-      - run: npm run lint
-      - run: npm run lint
       - uses: cypress-io/github-action@v1
         with:
           browser: chrome
