--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,9 @@ jobs:
       - run: npm run lint
   cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        containers: [1, 2]
     container: cypress/browsers:node13.3.0-chrome-79-ff70
     steps:
       - uses: actions/checkout@v1
@@ -17,6 +20,8 @@ jobs:
           browser: chrome
           headless: true
           record: true
+          parallel: true
+          group: 'Pipeline'
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       - uses: actions/upload-artifact@v1
