--- a/config/ci.config.json
+++ b/config/ci.config.json
@@ -6,5 +6,6 @@
   "pageLoadTimeout": 60000,
   "viewportHeight": 1080,
   "viewportWidth": 1920,
+  "screenshotsFolder": "ci-results/mochawesome-report/assets",
   "projectId": "xichaz"
 }
