--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cy:run:ci": "node run-ci.js",
     "commit": "git-cz",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "merge-test-results": "mochawesome-merge ./ci-results/mochawesome-report/*.json > ./ci-results/combined-mochawesome-results.json",
+    "generate-mochawesome-test-report": "marge ./ci-results/combined-mochawesome-results.json --reportDir ./ci-results/mochawesome-report/ --inline --charts --reportFilename cypress-scaffold-test-report --reportTitle \"Cypress Scaffold Test Report\" --reportPageTitle \"Cypress Scaffold Test Report\""
   },
   "author": "Josh McCure",
   "license": "ISC",
@@ -20,7 +22,12 @@
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-cypress": "^2.8.1",
-    "eslint-plugin-no-only-tests": "^2.4.0"
+    "eslint-plugin-no-only-tests": "^2.4.0",
+    "mocha": "^5.2.0",
+    "mochawesome": "^4.1.0",
+    "mochawesome-merge": "^4.0.0",
+    "mochawesome-report-generator": "^4.1.0",
+    "uuid": "^3.3.3"
   },
   "config": {
     "commitizen": {
