ci(remove lint stage): removing lint from its own stage because its testing

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,12 @@
 name: Pipeline
 on: [push]
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - run: npm ci
-      - run: npm run lint
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v1
+#       - run: npm ci
+#       - run: npm run lint
   cypress-run:
     runs-on: ubuntu-latest
     strategy:
@@ -15,6 +15,8 @@ jobs:
     container: cypress/browsers:node13.3.0-chrome-79-ff70
     steps:
       - uses: actions/checkout@v1
+      - run: npm ci
+      - run: npm run lint
       - run: npm run cy:run:ci
       # - uses: cypress-io/github-action@v1
       #   with:
