ci(report job): create report as job in CI

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,13 +17,6 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm ci
       - run: npm run cy:run:ci
-      # - uses: cypress-io/github-action@v1
-      #   with:
-      #     browser: chrome
-      #     headless: true
-      #     record: true
-      #     parallel: true
-      #     group: 'Pipeline'
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       - uses: actions/upload-artifact@v1
@@ -31,3 +24,12 @@ jobs:
         with:
           name: ci-results
           path: ci-results
+  test-report:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: ci-results
+      - run: npm merge-test-results
+      - run: generate-mochawesome-test-report
+    
