--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,12 +24,13 @@ jobs:
         with:
           name: ci-results
           path: ci-results
-  # test-report:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/download-artifact@v1
-  #       with:
-  #         name: ci-results
-  #     - run: npm merge-test-results
-  #     - run: generate-mochawesome-test-report
+  test-report:
+    runs-on: ubuntu-latest
+    needs: cypress-run
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: ci-results
+      - run: npm merge-test-results
+      - run: generate-mochawesome-test-report
     
