ci(job name): cypress has a job name

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
   cypress-run:
+    name: cypress-run
     runs-on: ubuntu-latest
     strategy:
       matrix:
