ci(main.yaml): update main.yaml

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,5 @@ jobs:
           name: ci-results
       - run: npm merge-test-results
       - run: generate-mochawesome-test-report
+    #now
     
