--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
+    name: lint
     steps:
       - uses: actions/checkout@v1
       - run: npm ci
@@ -10,6 +11,7 @@ jobs:
   cypress-run:
     name: cypress-run
     runs-on: ubuntu-latest
+    needs: lint
     strategy:
       matrix:
         containers: [1, 2]
