--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: cypress-run
     steps:
+      - uses: actions/checkout@v1
+      - run: npm ci
       - uses: actions/download-artifact@v1
         with:
           name: ci-results
