--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,6 @@ jobs:
       - uses: actions/upload-artifact@v1
         if: always()
         with:
-          name: ci-results/mochawesome-report
+          name: test-report
           path: ci-results/mochawesome-report
-    #now
     
