--- a/.github/workflows/cypress-github-actions.yaml
+++ b/.github/workflows/cypress-github-actions.yaml
@@ -29,6 +29,6 @@ jobs:
         with:
           name: cypress-screenshots
           path: cypress/screenshots
-        # with:
-        #   name: cypress-videos
-        #   path: cypress/videos
+        with:
+          name: cypress-videos
+          path: cypress/videos
