--- a/.github/workflows/cypress-module-API.yaml
+++ b/.github/workflows/cypress-module-API.yaml
@@ -27,6 +27,16 @@ jobs:
         with:
           name: ci-results
           path: ci-results
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-videos
+          path: cypress/videos
   test-report:
     runs-on: ubuntu-latest
     needs: cypress-run
