--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "cypress run",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
-    "cy:run:ci": "node run-ci.js",
+    "cy:run:ci": "node run-tests.js",
     "commit": "git-cz",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
-    "merge-test-results": "mochawesome-merge ./ci-results/mochawesome-report/*.json > ./ci-results/combined-mochawesome-results.json",
-    "generate-mochawesome-test-report": "marge ./ci-results/combined-mochawesome-results.json --reportDir ./ci-results/mochawesome-report/ --inline --charts --reportFilename cypress-scaffold-test-report --reportTitle \"Cypress Scaffold Test Report\" --reportPageTitle \"Cypress Scaffold Test Report\""
+    "merge-test-results": "mochawesome-merge ./test-results/test-report/*.json > ./test-results/combined-mochawesome-results.json",
+    "generate-test-report": "marge ./test-results/combined-mochawesome-results.json --reportDir ./test-results/test-report/ --inline --charts --reportFilename cypress-scaffold-test-report --reportTitle \"Cypress Scaffold Test Report\" --reportPageTitle \"Cypress Scaffold Test Report\""
   },
   "author": "Josh McCure",
   "license": "ISC",
@@ -23,10 +23,11 @@
     "eslint": "6.8.0",
     "eslint-plugin-cypress": "2.10.3",
     "eslint-plugin-no-only-tests": "2.4.0",
-    "mocha": "5.2.0",
-    "mochawesome": "4.1.0",
-    "mochawesome-merge": "4.0.0",
+    "mocha": "^7.0.1",
+    "mochawesome": "5.0.0",
+    "mochawesome-merge": "4.0.1",
     "mochawesome-report-generator": "4.1.0",
+    "rimraf": "^3.0.2",
     "uuid": "7.0.1"
   },
   "config": {
