--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: yarn install --frozen-lockfile
-      - run: yarn lint
+      - run: npm ci
+      - run: npm run lint
   cypress-run:
     runs-on: ubuntu-latest
     strategy:
@@ -22,7 +22,6 @@ jobs:
           record: true
           parallel: true
           group: 'Pipeline'
-          cache-key: node-v${{ matrix.node }}-on-${{ runner.os }}-hash-${{ hashFiles('yarn.lock') }}
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
       - uses: actions/upload-artifact@v1
