--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "commitizen": "4.0.3",
-    "cypress": "3.8.2",
+    "cypress": "^4.0.2",
     "cz-conventional-changelog": "3.0.2",
     "eslint": "6.8.0",
     "eslint-plugin-cypress": "2.8.1",
