--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "commitizen": "4.0.3",
     "cypress": "4.0.2",
     "cz-conventional-changelog": "3.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "6.8.0",
     "eslint-plugin-cypress": "2.10.3",
     "eslint-plugin-no-only-tests": "2.4.0",
