--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,33 +1,33 @@
-name: Pipeline
-on: [push]
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - run: npm ci
-      - run: npm run lint
-  cypress-run:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        containers: [1, 2]
-    container: cypress/browsers:node13.3.0-chrome-79-ff70
-    steps:
-      - uses: actions/checkout@v1
-      - uses: cypress-io/github-action@v1
-        with:
-          browser: chrome
-          headless: true
-          record: true
-          parallel: true
-          group: 'Pipeline'
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          EXECUTION_ENVIRONMENT: ${{ secrets.EXECUTION_ENVIRONMENT }}
-          AUTHOR: ${{ secrets.AUTHOR }}
-      - uses: actions/upload-artifact@v1
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
+# name: Pipeline
+# on: [push]
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v1
+#       - run: npm ci
+#       - run: npm run lint
+#   cypress-run:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         containers: [1, 2]
+#     container: cypress/browsers:node13.3.0-chrome-79-ff70
+#     steps:
+#       - uses: actions/checkout@v1
+#       - uses: cypress-io/github-action@v1
+#         with:
+#           browser: chrome
+#           headless: true
+#           record: true
+#           parallel: true
+#           group: 'Pipeline'
+#         env:
+#           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+#           EXECUTION_ENVIRONMENT: ${{ secrets.EXECUTION_ENVIRONMENT }}
+#           AUTHOR: ${{ secrets.AUTHOR }}
+#       - uses: actions/upload-artifact@v1
+#         if: failure()
+#         with:
+#           name: cypress-screenshots
+#           path: cypress/screenshots
