--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -23,6 +23,7 @@ jobs:
       - run: npm run cy:run:ci
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CI: ${{ secrets.CI }}
       - uses: actions/upload-artifact@v1
         if: always()
         with:
