--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -32,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: cypress-run
     steps:
+      if: always()
       - uses: actions/checkout@v1
       - run: npm ci
       - uses: actions/download-artifact@v1
