--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -29,7 +29,7 @@ jobs:
           name: test-results
           path: test-results
   test-report:
-    if: success() | failure()
+    if: (success() || failure())
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
