--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -8,8 +8,8 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm ci
       - run: npm run lint
-  cypress-run:
-    name: cypress-run
+  cypressrun:
+    name: cypressrun
     runs-on: ubuntu-latest
     needs: lint
     strategy:
@@ -29,7 +29,7 @@ jobs:
           name: test-results
           path: test-results
   test-report:
-    if: success() || failure()
+    if: cypressrun.success()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
