--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -8,8 +8,8 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm ci
       - run: npm run lint
-  cypressrun:
-    name: cypressrun
+  cypress-run:
+    name: cypress-run
     runs-on: ubuntu-latest
     needs: lint
     strategy:
@@ -29,7 +29,8 @@ jobs:
           name: test-results
           path: test-results
   test-report:
-    if: cypressrun.success()
+    needs: cypress-run
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
