--- a/.github/workflows/module-api.yaml
+++ b/.github/workflows/module-api.yaml
@@ -23,6 +23,7 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           CI: ${{ secrets.CI }}
+          PARALLEL: ${{ secrets.PARALLEL }}
       - uses: actions/upload-artifact@v1
         if: always()
         with:
