--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "devDependencies": {
     "commitizen": "4.0.4",
     "cypress": "4.4.0",
+    "cypress-multi-reporters": "^1.2.4",
     "cz-conventional-changelog": "3.1.0",
     "dotenv": "8.2.0",
     "eslint": "6.8.0",
     "eslint-plugin-cypress": "2.10.3",
     "eslint-plugin-no-only-tests": "2.4.0",
     "mocha": "7.1.1",
+    "mocha-junit-reporter": "^1.23.3",
     "mochawesome": "6.1.0",
     "mochawesome-merge": "4.0.3",
     "mochawesome-report-generator": "5.1.0",
