update result name

--- a/reporter-config.json
+++ b/reporter-config.json
@@ -5,6 +5,7 @@
     },
     "reporterOptions": {
         "reportDir": "test-results/mocha",
+        "reportFilename": "result",
         "overwrite": false,
         "html": false,
         "json": true
