--- a/config/default.config.json
+++ b/config/default.config.json
@@ -1,10 +1,11 @@
 {
-  "baseUrl": "https://dev.cypress.io",
+  "baseUrl": "https://example.cypress.io",
   "defaultCommandTimeout": 10000,
   "requestTimeout": 15000,
   "responseTimeout": 30000,
   "pageLoadTimeout": 60000,
   "viewportHeight": 1080,
   "viewportWidth": 1920,
+  "screenshotsFolder": "test-results/test-report/assets",
   "projectId": "xichaz"
 }
