--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:run:ci": "node run-tests.js",
+    "kubernetes": "cypress run --headless --browser chrome --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json $(CYPRESS_RECORD_KEY)",
     "commit": "git-cz",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
