--- a/config/default.config.json
+++ b/config/default.config.json
@@ -7,5 +7,8 @@
   "viewportHeight": 1080,
   "viewportWidth": 1920,
   "screenshotsFolder": "test-results/test-report/assets",
-  "projectId": "xichaz"
+  "projectId": "xichaz",
+  "env": {
+    "apiUrl": "https://api.example.cypress.io"
+  }
 }
