--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "mochawesome": "6.2.1",
     "mochawesome-merge": "4.2.0",
     "mochawesome-report-generator": "5.1.0",
+    "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "rimraf": "3.0.2",
     "uuid": "8.3.1"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "npm run lint:fix && pretty-quick --staged && npm run cy:run"
     }
   }
 }
