--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "rules": {
         "cypress/no-assigning-return-values": "error",
         "cypress/no-unnecessary-waiting": "error",
-        "no-only-tests/no-only-tests": "error",
-        "quotes": [2, "single", { "avoidEscape": true }]
+        "no-only-tests/no-only-tests": "error"
       },
       "env": {
         "cypress/globals": true
