--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,6 @@
 {
-	"semi": false,
-	"singleQuotes": true,
-	"useTabs": true,
-	"tabWidth": 2,
-	"bracketSpacing": true,
-	"arrowParens": "avoid",
-	"trailingComma": "es5"
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
 }
