--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
+    "semi": true,
+    "singleQuote": true,
     "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+    "tabWidth": 2,
+    "bracketSpacing": true,
+    "arrowParens": "avoid",
+    "printWidth": 120,
+
 }
