--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "bracketSpacing": true,
-    "arrowParens": "avoid",
-    "printWidth": 120,
-
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "printWidth": 120
 }
